--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Newton's Space Rescue - Educational Physics Game</title>
-    <meta name="description" content="Learn Newton's Three Laws of Motion through an engaging 2D space rescue game. Educational browser game for 9th graders featuring realistic physics and momentum-based gameplay." />
-    <meta name="author" content="Educational Gaming Team" />
-    <meta name="keywords" content="physics education, Newton's laws, educational game, space simulation, momentum, force, acceleration" />
+    <title>Newton's Space Drift - Interactive Physics Education Game</title>
+    <meta name="description" content="Experience Newton's Laws of Motion in action through an engaging space rescue game. Perfect for middle and high school physics education with interactive demonstrations of momentum, force, and acceleration." />
+    <meta name="author" content="Physics Education Game Team" />
+    <meta name="keywords" content="physics education, Newton's laws, educational game, space simulation, momentum, force, acceleration, conservation of momentum, interactive learning, STEM education, physics game" />
 
-    <meta property="og:title" content="Newton's Space Rescue - Educational Physics Game" />
-    <meta property="og:description" content="Learn Newton's Three Laws of Motion through an engaging 2D space rescue game. Perfect for 9th grade physics education." />
+    <meta property="og:title" content="Newton's Space Drift - Interactive Physics Education Game" />
+    <meta property="og:description" content="Master Newton's Three Laws of Motion through an engaging space rescue game. Features four progressive levels demonstrating inertia, F=ma, action-reaction, and conservation of momentum." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/assets/game-screenshot.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@PhysicsGames" />
+    <meta name="twitter:image" content="/public/assets/game-screenshot.png" />
+    
+    <!-- Additional SEO meta tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="theme-color" content="#0B1426" />
   </head>
 
   <body>
